[package]
name = "big_data_reddit_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
roux = "2.2.13"
serde = { version = "1.0.210", features = ["derive", "serde_derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
